welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:22: error: not found: value Direction
  setDirection(Direction.NORTH)
               ^